--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ font-size: 14px;
  
 .logo {
     float: left;   
+    margin-left: 400px;
     /*   text logo*/
      font-family: "Times New Roman", Times, Sans-serif;
      font-size: 66px;
@@ -141,12 +142,19 @@ font-size: 14px;
 
 /* end header top*/
 /********************************************************************************/
-
+/* BEGIN  filter*/
 .filter {
      background-color:white;
      height:50px;  
      border-bottom: 2px solid #efeef1;
+    
+    
 }
+
+/* END filter*/
+/********************************************************************************/
+
+
 
 section {
      width: 810px;
