--- a/style/style.css
+++ b/style/style.css
@@ -86,16 +86,16 @@ video {
     vertical-align: baseline;
 }
 
-@font-face {
-    font-family: "MyriadProRegular";
-    src: url("../fonts/MyriadProRegular/MyriadProRegular.eot");
-    src: url("../fonts/MyriadProRegular/MyriadProRegular.eot?#iefix")format("embedded-opentype"), url("../fonts/MyriadProRegular/MyriadProRegular.woff") format("woff"), url("../fonts/MyriadProRegular/MyriadProRegular.ttf") format("truetype");
-    font-style: normal;
-    font-weight: normal;
-}
+ 
 
 div {
-    font-family: "MyriadProRegular", Times, Sans-serif;
+    
+    font-family: 'Open Sans';
+    font-size: 24px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 26.3999996185303px;
 }
  
 .wriper {
